fix: font size for kube context/namespace selectors is too large
Also adds "User Namespaces" header to CurrentNamespace

--- a/plugins/plugin-client-common/web/scss/components/Select/PatternFly.scss
+++ b/plugins/plugin-client-common/web/scss/components/Select/PatternFly.scss
@@ -51,6 +51,7 @@
   }
 
   button {
+    font-size: inherit;
     padding-top: 0.375em;
     padding-bottom: 0.375em;
   }
